[package]
name = "tutils"
version = "0.1.0"
authors = ["gioelecer <gioelecer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "1.0.3"
async-std = { version = "1.2.0", features = ["unstable"] }
serde_json = "1.0.34"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"] }
json = "0.11.13"
quickxml_to_serde = "0.4.1"